--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
-    "eslint-plugin-risxss": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.4",
     "react-redux": "^8.0.5",
+    "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.6.1",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "react-syntax-highlighter": "^15.5.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tesseract.js": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -25,6 +28,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "process": "^0.11.10",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
